# routes/contacts.js
@@ -1,13 +1,0 @@
-const express = require('express');
-const router = express.Router();
-
-const contactController = require('../controllers/contacts');
-
-router.get('/', contactController.getAllContacts);
-router.get('/:id', contactController.getOneContact);
-router.post('/', contactController.createContact);
-router.put('/:id', contactController.updateContact);
-router.delete('/:id', contactController.deleteContact);
-
-
-module.exports = router;
